--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1659,7 +1659,7 @@ ul.informac {
     display: block;
     position: absolute;
     font-size: 20px;
-    left: 21%;
+    left: 0%;
     text-align: center;
     color: #fff;
     margin: auto;
@@ -1696,6 +1696,7 @@ div.infx:hover {
   display: block;
 }
 #notifi div.love h4 {
+  position: relative;
   margin: 10px; 
   text-align: center;
   color: grey;
@@ -1714,6 +1715,7 @@ div.infx:hover {
 }
 #notifi div.love p {
   font-size: 15px;
+  position: relative;
   color: white;
   float: right;
   height: auto;
@@ -1725,6 +1727,7 @@ div.infx:hover {
 #notifi div.love i {
   text-decoration: none;
   font-style: normal;
+  position: relative;
   left:7%;
   font-size: 40px;
   padding: 10px 10px;
