--- a/skyfolk/static/css/widget1.css
+++ b/skyfolk/static/css/widget1.css
@@ -46,10 +46,12 @@ body{
 	overflow:hidden;
 	top: 87.3%;
 	opacity: 0.4;
+	-moz-transition: margin .2s;
 	transition: margin .2s;
 	-webkit-transition: margin .2s;
 	transition: all .3s ease-in;
 	-webkit-transition: all .3s ease-in;
+	-moz-transition: all .3s ease-in;
 
 }
 #widget:hover {
