--- a/skyfolk/templates/account/base_login-signup.html
+++ b/skyfolk/templates/account/base_login-signup.html
@@ -82,7 +82,7 @@
        	
        {% block content %}{% endblock %}
 
-         <footer></footer>   
+         <footer><ul><li>Contacto</li></ul></footer>   
     </body>
 
 </html>
