--- a/skyfolk/static/css/login-signup.css
+++ b/skyfolk/static/css/login-signup.css
@@ -29,6 +29,15 @@ footer {
     width: auto;
     height: 20%;
 }
+ul {
+  position: relative;
+  margin: auto;
+}
+li {
+  color: #000;
+  position: relative;
+  margin: auto 20px;
+}
 .block-form{
 
 
@@ -500,29 +509,4 @@ footer {
     border: 2px solid #56B9B9;
     transition: all .3s ease-in;
     clear: both;
-}
-span.entypo-right-open {
-    color: white;
-    margin: auto 20px;
-    font-size: 20px;
-}
-img:hover {
-    border: 2px solid tomato;
-    opacity: 0.7;
-}
-a.entypo-plus {
-    font-size: 40px;
-    color: white;
-    position: absolute;
-    padding: 15px 15px;
-    color: #56B9B9;
-    background: #000;
-    transition: all .2s ease-in;
-    margin-top: 33%;
-    left: 50.5%;
-    opacity: 0.7;
-    border-radius: 7px;
-}
-a.entypo-plus:hover {
-    color: #fff;
 }
