--- a/skyfolk/static/css/login-signup.css
+++ b/skyfolk/static/css/login-signup.css
@@ -21,7 +21,7 @@ span.cabezal {
 font-size: 70px;
 }
 footer {
-    position: absolute;
+    position: relative;
     display: block;
     overflow: hidden;
     background: white;
@@ -31,6 +31,7 @@ footer {
     width: auto;
     height: auto;
     margin: auto;
+    padding: 20px;
 }
 ul{
   position: relative;
