--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1081,10 +1081,10 @@ z-index: 9999;
   box-shadow: 0 0 0 0.2em rgba(255, 255, 255, 0.85), 0 0 0 0.3em rgba(0, 0, 0, 0.25);
   position: relative;
   z-index: 3;
-  float: right;
-  right: 7px;
+  float: left;
+  left: 7px;
   cursor: pointer;
-  top: 25px;
+  top: 9px;
   transition: all .3s ease-in-out;
 }
 .foto_perfil:hover {
