--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1079,7 +1079,7 @@ z-index: 9999;
   border-radius: 98%;
   margin: auto;
   box-shadow: 0 0 0 0.2em rgba(255, 255, 255, 0.85), 0 0 0 0.3em rgba(0, 0, 0, 0.25);
-  position: relative;
+  position: absolute;
   z-index: 3;
   float: left;
   left: 7px;
