--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1081,8 +1081,8 @@ z-index: 9999;
   box-shadow: 0 0 0 0.2em rgba(255, 255, 255, 0.85), 0 0 0 0.3em rgba(0, 0, 0, 0.25);
   position: absolute;
   z-index: 3;
-  float: right;
-  right: 93%; 
+  float: left;
+  left: 2%; 
   cursor: pointer;
   top: 9px;
   transition: all .3s ease-in-out;
@@ -1103,6 +1103,7 @@ z-index: 9999;
     padding: 5px;
     margin: 40px;
     width: 225px;
+    float: left;
 }
 
 * {
