--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1079,12 +1079,12 @@ z-index: 9999;
   border-radius: 98%;
   margin: auto;
   box-shadow: 0 0 0 0.2em rgba(255, 255, 255, 0.85), 0 0 0 0.3em rgba(0, 0, 0, 0.25);
-  position: absolute;
+  position: relative;
   z-index: 3;
-  float: left;
-  left: 2%; 
+  float: right;
+  right: 7px;
   cursor: pointer;
-  top: 9px;
+  top: 25px;
   transition: all .3s ease-in-out;
 }
 .foto_perfil:hover {
@@ -1092,11 +1092,10 @@ z-index: 9999;
 }
 #nav2 {
     width: 20px;
-    margin: 100px auto;
+    margin: 40px auto;
     margin-right: 250px;
-    top: 10%;
-    position: absolute;
-    left: 0%;
+    top: 3%;
+    position: relative;
     
 }
 .nameact {
