--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -134,7 +134,38 @@ top.window.outerWidth = screen.availWidth;
 	</form>
 	
 
-  	</div></li></li></ul>
+  	</div></li></li>
+  	<li><div id="nav2">
+<ul class="nameact">   
+<div class=" foto_perfil" title="{{ user_profile.username }}"></div></ul>
+ 
+
+   
+    <div id="panel1" style="display:none;">
+      
+     <dropdown>
+ 
+  <ul class="animate">
+    <li class="animate">Mi perfil <i class="fontawesome-user"></i></li>
+    <li class="animate">Multimedia <i class="fontawesome-film"></i></li>
+    <li class="animate">Juegos <i class="fontawesome-play"></i></li>
+    <li class="animatex">+ Visto <i class="fontawesome-eye-open"></i></li>
+    <li class="animatex"> + likes <i class="fontawesome-thumbs-up"></i></li>
+    <li class="animatex"> Famosos <i class="fontawesome-certificate"></i></li>
+    <li class="animatex"> Favoritos <i class="fontawesome-star"></i></li>
+    <li class="animatex"> Descubre <i class="fontawesome-globe"></i></li>
+    <li class="animatee"> Mi baúl <i class="fontawesome-briefcase"></i></li>
+    <li class="animatee"> Comentarios favoritos <i class="fontawesome-star-half"></i></li>
+  </ul>
+</dropdown>
+
+
+
+    </div>
+    
+</div>
+</li>
+  </ul>
 
   	{% if showPerfilButtons or user.username == user_profile.username %}
 
