--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1082,13 +1082,20 @@ z-index: 9999;
   position: relative;
   z-index: 3;
   float: right;
-  right: 7px;
+  right: -13px;
   cursor: pointer;
   top: 25px;
   transition: all .3s ease-in-out;
+  -webkit-transition: all .3s ease-in-out;
+  -moz-transition: all .3s ease-in-out;
+  transition: margin-right 2s;
+  -webkit-transition: right 2s;
+  -moz-transition: right 2s; 
+
 }
 .foto_perfil:hover {
   border: 1px solid #71FF95;
+  right: 17px;
 }
 #nav2 {
     width: 20px;
