--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1069,7 +1069,7 @@ z-index: 9999;
   /*Fin informacion perfil */
   
   /* Presencia user */
- .foto_perfil {
+.foto_perfil {
   width: 45px;
   height: 45px;
   background: url(http://4.bp.blogspot.com/-OMr8Sy2iEwk/T2DXLgbjXpI/AAAAAAAADKk/RtqLjc2i3J8/s1600/el_padrino_marlon_brando.jpg) no-repeat top right;
@@ -1081,34 +1081,34 @@ z-index: 9999;
   box-shadow: 0 0 0 0.2em rgba(255, 255, 255, 0.85), 0 0 0 0.3em rgba(0, 0, 0, 0.25);
   position: relative;
   z-index: 3;
-  float: right;
-  right: -40px;
+  float: left;
+  left: -40px;
   cursor: pointer;
-  top: 25px;
+  top: 0px;
   transition: all .3s ease-in-out;
   -webkit-transition: all .3s ease-in-out;
   -moz-transition: all .3s ease-in-out;
   transition: margin-right 2s;
-  -webkit-transition: right 2s;
-  -moz-transition: right 2s; 
+  -webkit-transition: left 2s;
+  -moz-transition: left 2s; 
 
 }
 .foto_perfil:hover {
   border: 1px solid #71FF95;
-  right: 7px;
+  left: 7px;
 }
 #nav2 {
     width: 20px;
-    margin: 40px auto;
+    margin: auto;
     margin-right: 250px;
-    top: 3%;
+    top: 0%;
     position: relative;
-    
+    float: left;
 }
 .nameact {
     list-style: none;
     padding: 5px;
-    margin: 40px;
+    margin: auto;
     width: 225px;
 }
 
