--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1100,7 +1100,7 @@ z-index: 9999;
 #nav2 {
     width: 20px;
     margin: 40px auto;
-    margin-right: 250px;
+    margin-right: 80%;
     top: 3%;
     position: relative;
     
