--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1084,7 +1084,7 @@ z-index: 9999;
   float: right;
   right: 90%;
   cursor: pointer;
-  top: -50px;
+  top: -55px;
   transition: all .3s ease-in-out;
   -webkit-transition: all .3s ease-in-out;
   -moz-transition: all .3s ease-in-out;
@@ -1109,6 +1109,10 @@ z-index: 9999;
     margin: 40px;
     width: 225px;
     z-index: 9999; 
+}
+#panel1 {
+  position: absolute;
+  z-index: 9999;
 }
 
 * {
