--- a/skyfolk/static/css/buscar.css
+++ b/skyfolk/static/css/buscar.css
@@ -202,7 +202,7 @@
 }
 dropdown{
    display: inline-block;
-   margin: 20px 0px; 
+   margin: auto 0px; 
 }
 dropdown label, dropdown ul li{
   display: block;
