--- a/skyfolk/templates/account/base_login-signup.html
+++ b/skyfolk/templates/account/base_login-signup.html
@@ -73,8 +73,10 @@
     </head>
     <body>
        <!--<div id="texto"><img class="logo" src="{{STATIC_URL}}img/logo.png"><h2>S<span>kyfolk.</span></h2>-->
+       <header>
 	<div id="texto"><h2>S<span>kyfolk.</span></h2>
        	</div>
+       </header>
        	
        {% block content %}{% endblock %}
 
