--- a/skyfolk/static/css/login-signup.css
+++ b/skyfolk/static/css/login-signup.css
@@ -30,6 +30,9 @@ header {
   background: #fff;
   color: grey;
   font-family: 'PT Sans', sans-serif;
+  border-bottom-left-radius: 15px;
+  border-bottom-right-radius: 15px;
+  margin: -100px;
 }
 footer {
     position: relative;
