--- a/skyfolk/static/css/login-signup.css
+++ b/skyfolk/static/css/login-signup.css
@@ -33,11 +33,9 @@ header {
   border-bottom-left-radius: 15px;
   border-bottom-right-radius: 15px;
   margin-top: -100px;
-  margin:auto;
 }
 footer {
     position: fixed;
-    display: block;
     overflow: hidden;
     background: white;
     opacity: 0.8;
@@ -45,9 +43,9 @@ footer {
     border-top-right-radius: 20px;
     width: auto;
     height: auto;
-    margin-top: 50px;
-    margin:auto;
+    margin-top: 100px;
     padding: 10px;
+    width: 100%;
 }
 ul{
   position: relative;
