--- a/skyfolk/templates/account/base_login-signup.html
+++ b/skyfolk/templates/account/base_login-signup.html
@@ -45,7 +45,7 @@
 				width:400px;
 				height:50px;
 				margin-left:7%;
-				margin-top:0;
+				margin-top:-15px;
 				font-size:12px;
 				font-family: 'Gafata', sans-serif;
 			}
