--- a/skyfolk/templates/account/base_login-signup.html
+++ b/skyfolk/templates/account/base_login-signup.html
@@ -45,7 +45,7 @@
 				width:400px;
 				height:50px;
 				margin-left:7%;
-				margin-top:-15px;
+				margin-top:-20px;
 				font-size:12px;
 				font-family: 'Gafata', sans-serif;
 			}
@@ -69,6 +69,14 @@
        <header>
 	<div id="texto"><h2>S<span>kyfolk.</span></h2>
        	</div>
+       	
+<div id="Menu"> 
+<div id="centro"><img src="" width="300" height="300"><span class="entypo-user"></span></div>
+<div id="llinkedin" class="size left"><span class="entypo-users"></span></div>
+<div id="ddribbble" class="size right"><span class="entypo-mail"></span></div>
+<div id="ffacebook" class="size left"><span class="entypo-calendar"></span></div>
+<div id="ttwitter" class="size right"><span class="entypo-logout"></span></div>
+</div>
        </header>
        	
        {% block content %}{% endblock %}
