--- a/skyfolk/static/css/login-signup.css
+++ b/skyfolk/static/css/login-signup.css
@@ -543,8 +543,8 @@ li {
   border-radius: 210px;
     box-shadow:2px 0px 2px #444;
     position:fixed;
-    left:50%;top:0%;
-  float: left;
+    left:30%;top:5%;
+    margin: auto;
     /*margin:100px auto;*/
     z-index:2;
     overflow:hidden;
