--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1025,6 +1025,15 @@ opacity: 0.8;
 top: 3px;
 z-index: 9999;
 }
+nav.sticky {
+  line-height: 48px;
+  height: 52px;
+  background-color: rgba(0, 174, 205, 0.7);
+  box-shadow: 3px 2px 4px 3px rgb(0, 174, 205);
+  text-align: left;
+  padding-left: 20px;
+  transition: all 0.4s ease;
+}
 
 #closesession{
     font-family: 'Ubuntu', 'Lato', sans-serif;
