--- a/skyfolk/static/css/comentarios.css
+++ b/skyfolk/static/css/comentarios.css
@@ -348,6 +348,19 @@ span[class*="thumbs-up"]:hover {
          -o-perspective: 2000px;
             perspective: 2000px;
   }
+  /* FOTO PERFIL SUBE A HEADER */ 
+   .caja.sticky {
+  height: 2px;
+  margin-top: -453px;
+  position: fixed;
+  float: left;
+  left: 2.5%;
+  padding-left: 0px;
+  width: 50px;
+  z-index: 999;
+  font-size: 10px;
+  -moz-transform: scale(0.4)
+  }
 .item {
     height: 20px;
       -webkit-transform-style: preserve-3d;
