--- a/skyfolk/static/css/comentarios.css
+++ b/skyfolk/static/css/comentarios.css
@@ -351,15 +351,16 @@ span[class*="thumbs-up"]:hover {
   /* FOTO PERFIL SUBE A HEADER */ 
    .caja.sticky {
   height: 2px;
-  margin-top: -265px;
+  margin-top: -400px;
   position: fixed;
   float: left;
-  left: 2%;
+  left: 0%;
   padding-left: 0px;
   width: 50px;
   z-index: 999;
   font-size: 10px;
   -moz-transform: scale(0.4)
+  z-index: 9999;
   }
 .item {
     height: 20px;
