--- a/skyfolk/static/css/login-signup.css
+++ b/skyfolk/static/css/login-signup.css
@@ -36,7 +36,8 @@ header {
 }
 footer {
     position: fixed;
-    overflow: hidden;
+    font-family: 'PT Sans', sans-serif;
+    text-align: center;
     background: white;
     opacity: 0.8;
     border-top-left-radius: 20px;
@@ -46,6 +47,7 @@ footer {
     margin-top: 70px;
     padding: 10px;
     width: 95%;
+    height: 108px;
 }
 ul{
   position: relative;
