--- a/skyfolk/templates/account/base_login-signup.html
+++ b/skyfolk/templates/account/base_login-signup.html
@@ -66,7 +66,7 @@
     </head>
     <body>
        <!--<div id="texto"><img class="logo" src="{{STATIC_URL}}img/logo.png"><h2>S<span>kyfolk.</span></h2>-->
-       <header>
+       <div id="header">
 	<div id="texto"><h2>S<span>kyfolk.</span></h2>
        	</div>
 
@@ -77,18 +77,18 @@
 <div id="ffacebook" class="size left"><span class="entypo-calendar"></span></div>
 <div id="ttwitter" class="size right"><span class="entypo-logout"></span></div>
 </div>
-       </header>
+       </div>
        	
        {% block content %}{% endblock %}
 
-         <footer>
+         <div id="footer">
 <ul>
 <li>About Us</li>
 <li>Skyfolk ©</li>
 <li>More</li>
 <li></li>
 </ul>
-</footer>   
+</div>   
     </body>
 
 </html>
