--- a/skyfolk/templates/account/base_login-signup.html
+++ b/skyfolk/templates/account/base_login-signup.html
@@ -30,6 +30,7 @@
 				-moz-background-size: cover;
 				background-size: cover;
 				font-family: 'Roboto', sans-serif;
+				height: auto;
 			}
 			
 			.container > header h1,
