--- a/skyfolk/templates/account/base_login-signup.html
+++ b/skyfolk/templates/account/base_login-signup.html
@@ -26,9 +26,9 @@
 
 			body {
 				background: #563c55 url({{STATIC_URL}}img/7.jpg) no-repeat center top;
-				-webkit-background-size: cover;
-				-moz-background-size: cover;
-				background-size: cover;
+				-webkit-background-size: 100%;
+				-moz-background-size: 100%;
+				background-size: 100%;
 				font-family: 'Roboto', sans-serif;
 				height: auto;
 			}
