--- a/skyfolk/templates/account/base_login-signup.html
+++ b/skyfolk/templates/account/base_login-signup.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <!-- BACKGROUND CHANGE -->
-       <div id="background_cycler" >
+       
+<script>
+function cycleImages(){
+      var $active = $('#background_cycler .active');
+      var $next = ($('#background_cycler .active').next().length > 0) ? $('#background_cycler .active').next() : $('#background_cycler img:first');
+      $next.css('z-index',2);//move the next image up the pile
+	  $active.fadeOut(1500,function(){//fade out the top image
+	  $active.css('z-index',1).show().removeClass('active');//reset the z-index and unhide the image
+      $next.css('z-index',3).addClass('active');//make the next image the top one
+      });
+    }
 
-        <script type="text/javascript">
-        $('#background_cycler').hide();//hide the background while the images load, ready to fade in later
-        </script>
-
-        <img class="active" src="{{STATIC_URL}}img/7.jpg" alt=""/>
-        <img src="{{STATIC_URL}}img/1.jpg" alt=""   />
-        <img src="{{STATIC_URL}}img/2.jpg" alt=""  />
-        <img src="{{STATIC_URL}}img/3.jpg" alt=""/>		
-        <img src="{{STATIC_URL}}img/4.jpg" alt=""  />
-        </div>
-
+    $(window).load(function(){
+		$('#background_cycler').fadeIn(1500);//fade the background back in once all the images are loaded
+		  // run every 7s
+		  setInterval('cycleImages()', 7000);
+    })
+    </script>
 	     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
          <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/noti.css" />
          <script type="text/javascript" src="http://www.google.com/jsapi"></script>
@@ -44,6 +48,7 @@
 				font-family: 'Roboto', sans-serif;
 				height: auto;
 			}
+
 			/* FOR BACKGROUND CHANGE */
 			#background_cycler{padding:0;margin:0;width:100%;position:absolute;top:0;left:0;z-index:-1}
             #background_cycler img{position:absolute;left:0;top:0;width:100%;z-index:1}
@@ -95,7 +100,19 @@
 <div id="ttwitter" class="size right"><span class="entypo-logout"></span></div>
 </div>
        </div>
-       	
+       	<!-- BACKGROUND CHANGE -->
+       <div id="background_cycler" >
+
+        <script type="text/javascript">
+        $('#background_cycler').hide();//hide the background while the images load, ready to fade in later
+        </script>
+
+        <img class="active" src="{{STATIC_URL}}img/7.jpg" alt=""/>
+        <img src="{{STATIC_URL}}img/1.jpg" alt=""   />
+        <img src="{{STATIC_URL}}img/2.jpg" alt=""  />
+        <img src="{{STATIC_URL}}img/3.jpg" alt=""/>		
+        <img src="{{STATIC_URL}}img/4.jpg" alt=""  />
+        </div>
        {% block content %}{% endblock %}
 
          <div id="footer">
