--- a/skyfolk/static/css/login-signup.css
+++ b/skyfolk/static/css/login-signup.css
@@ -39,7 +39,7 @@ font-size: 70px;
   margin-top: -50px;
 }
 #footer {
-    position: absolute;
+    position: fixed;
     bottom: 0;
     font-family: 'PT Sans', sans-serif;
     text-align: center;
