--- a/skyfolk/static/css/login-signup.css
+++ b/skyfolk/static/css/login-signup.css
@@ -50,7 +50,7 @@ font-size: 70px;
     margin-top: 70px;
     padding: 10px;
     width: 95%;
-    height: 80px;
+    height: 50px;
 }
 ul{
   position: relative;
@@ -59,10 +59,11 @@ ul{
 
 }
 li {
-  color: #000;
+  color: #7EC6F5;;
   position: relative;
   margin: auto 20px;
   display: inline;
+  font-weight: 300;
 }
 .block-form{
 
