--- a/skyfolk/templates/account/base_login-signup.html
+++ b/skyfolk/templates/account/base_login-signup.html
@@ -79,6 +79,10 @@
 <div id="ffacebook" class="size left"><span class="entypo-calendar"></span></div>
 <div id="ttwitter" class="size right"><span class="entypo-logout"></span></div>
 </div>
+<div class="Register">
+	<p class="Register">¿Empresa, grupo o evento? ¡Regístrate!</p>
+<button class="send" onClick="alert('¡Mensaje enviado!')">Registrar</button>
+</div>
        </div>
        	
        {% block content %}{% endblock %}
