--- a/skyfolk/static/css/login-signup.css
+++ b/skyfolk/static/css/login-signup.css
@@ -50,7 +50,7 @@ font-size: 70px;
     margin-top: 70px;
     padding: 10px;
     width: 95%;
-    height: 50px;
+    height: 35px;
 }
 ul{
   position: relative;
@@ -59,11 +59,41 @@ ul{
 
 }
 li {
-  color: #7EC6F5;;
+  color: #000;;
   position: relative;
   margin: auto 20px;
   display: inline;
-  font-weight: 300;
+  font-weight: 400;
+}
+div.Register {
+    position: relative;
+    width: 300px;
+    float: right;
+    display: inline-block;
+    height: 30px;
+}
+p.Register {
+    font-size: 14px;
+    color: #ccc;
+    line-height: 3px;
+    position: relative;
+    display: inline-block;
+}
+button.register {
+  background-color: #AA8439;
+  padding: 12px 12px;
+  border: 0;
+  outline: none;
+  border-radius: 4px;
+  font-size: 14px;
+  color: #FFE1E1;
+  font-width: 400;
+  position: relative;
+  margin-top: 30px;
+  display: inline-block;
+  left: 50%;
+  cursor: pointer;
+  transition: all .3s ease-in;
 }
 .block-form{
 
