--- a/skyfolk/templates/account/base_login-signup.html
+++ b/skyfolk/templates/account/base_login-signup.html
@@ -81,7 +81,7 @@
 </div>
 <div class="Register">
 	<p class="Register">¿Empresa, grupo o evento? ¡Regístrate!</p>
-<button class="register" onClick="alert('¡Mensaje enviado!')">Registrar</button>
+<button class="register">Registrar</button>
 </div>
        </div>
        	
