--- a/skyfolk/static/css/login-signup.css
+++ b/skyfolk/static/css/login-signup.css
@@ -89,8 +89,8 @@ button.register {
   font-size: 14px;
   color: #FFE1E1;
   font-width: 400;
-  position: absolute;
-  display: inline-block;
+  position: relative;
+  display: inline;
   cursor: pointer;
   margin: auto;
 }
