--- a/skyfolk/static/css/login-signup.css
+++ b/skyfolk/static/css/login-signup.css
@@ -67,10 +67,10 @@ li {
 }
 div.Register {
     position: relative;
-    width: 370px;
+    width: 400px;
     left: 10%;
     display: inline-block;
-    height: 50px;
+    height: 100%;
     margin: auto;
 }
 p.Register {
