--- a/skyfolk/static/css/login-signup.css
+++ b/skyfolk/static/css/login-signup.css
@@ -3,6 +3,7 @@
 @import url(http://fonts.googleapis.com/css?family=Gafata);
 @import url(http://fonts.googleapis.com/css?family=Open+Sans);
 @import url(http://fonts.googleapis.com/css?family=Roboto);
+@import url(http://fonts.googleapis.com/css?family=Lato:300);
 
 /*
 body {
@@ -405,43 +406,34 @@ button.register:hover {
 	
 	}
 .myButton {
-	-moz-box-shadow: 0px 1px 0px 0px #f0f7fa;
-	-webkit-box-shadow: 0px 1px 0px 0px #f0f7fa;
-	box-shadow: 0px 1px 0px 0px #f0f7fa;
-	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #33bdef), color-stop(1, #019ad2));
-	background:-moz-linear-gradient(top, #33bdef 5%, #019ad2 100%);
-	background:-webkit-linear-gradient(top, #33bdef 5%, #019ad2 100%);
-	background:-o-linear-gradient(top, #33bdef 5%, #019ad2 100%);
-	background:-ms-linear-gradient(top, #33bdef 5%, #019ad2 100%);
-	background:linear-gradient(to bottom, #33bdef 5%, #019ad2 100%);
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#33bdef', endColorstr='#019ad2',GradientType=0);
-	background-color:#33bdef;
-	-moz-border-radius:6px;
-	-webkit-border-radius:6px;
-	border-radius:6px;
-	border:1px solid #057fd0;
+
+    background-color:#32C0EF;
+	-moz-border-radius:3px;
+	-webkit-border-radius:3px;
+	border-radius:3px;
+	border:0;
 	display:inline-block;
 	cursor:pointer;
 	color:#ffffff;
-	font-family:arial;
 	font-size:15px;
 	font-weight:bold;
 	padding:6px 24px;
 	text-decoration:none;
-	text-shadow:0px -1px 0px #5b6178;
 	float:right;
     position:relative;
     top:23px;
+    outline: none;
+    font-family: 'Lato', sans-serif;
+    transition: all .2s ease-in;
 }
 .myButton:hover {
-	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #019ad2), color-stop(1, #33bdef));
-	background:-moz-linear-gradient(top, #019ad2 5%, #33bdef 100%);
-	background:-webkit-linear-gradient(top, #019ad2 5%, #33bdef 100%);
-	background:-o-linear-gradient(top, #019ad2 5%, #33bdef 100%);
-	background:-ms-linear-gradient(top, #019ad2 5%, #33bdef 100%);
-	background:linear-gradient(to bottom, #019ad2 5%, #33bdef 100%);
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#019ad2', endColorstr='#33bdef',GradientType=0);
-	background-color:#019ad2;
+
+	background-color:#049DCF;
+    background-image: url('https://cdn2.iconfinder.com/data/icons/windows-8-metro-style/512/login.png');
+    background-repeat: no-repeat;
+    background-size: 20px;
+    background-position: center;
+    color: transparent;
 }
 .myButton:active {
 	position:relative;
@@ -463,44 +455,36 @@ button.register:hover {
 }
 
 #link-login{
--moz-box-shadow: 0px 1px 0px 0px #f0f7fa;
-    -webkit-box-shadow: 0px 1px 0px 0px #f0f7fa;
-    box-shadow: 0px 1px 0px 0px #f0f7fa;
-    background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #6E6E6E), color-stop(1, #6E6E6E));
-    background:-moz-linear-gradient(top, #6E6E6E 5%, #9A9A9A 100%);
-    background:-webkit-linear-gradient(top, #6E6E6E 5%, #9A9A9A 100%);
-    background:-o-linear-gradient(top, #6E6E6E 5%, #9A9A9A 100%);
-    background:-ms-linear-gradient(top, #76E6E6E 5%, #9A9A9A 100%);
-    background:linear-gradient(to bottom, #6E6E6E 5%, #9A9A9A 100%);
-    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#B133F0', endColorstr='#9A9A9A',GradientType=0);
-    background-color:#6E6E6E;
-    -moz-border-radius:6px;
-    -webkit-border-radius:6px;
-    border-radius:6px;
-    border:1px solid #1F2124;
+
+    background-color:#5A5550;
+    -moz-border-radius:3px;
+    -webkit-border-radius:3px;
+    border-radius:3px;
+    border:0;
     display:inline-block;
     cursor:pointer;
     color:#ffffff;
-    font-family:arial;
     font-size:15px;
     font-weight:bold;
     padding:6px 24px;
     text-decoration:none;
-    text-shadow:0px -1px 0px #5b6178;
     float:left;
     position:relative;
     top:0px;
+    font-family: 'Lato', sans-serif;
+    outline: none;
+    transition: all .2s ease-in;
 	
 }
 #link-login:hover {
-    background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #6E6E6E), color-stop(1, #6E6E6E));
-    background:-moz-linear-gradient(top, #9A9A9A 5%, #6E6E6E 100%);
-    background:-webkit-linear-gradient(top, #9A9A9A 5%, #6E6E6E 100%);
-    background:-o-linear-gradient(top, #9A9A9A 5%, #6E6E6E 100%);
-    background:-ms-linear-gradient(top, #9A9A9A 5%, #6E6E6E 100%);
-    background:linear-gradient(to bottom, #9A9A9A 5%, #6E6E6E 100%);
-    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#6E6E6E', endColorstr='#B133F0',GradientType=0);
     background-color:#6E6E6E;
+    background-image: url('https://cdn3.iconfinder.com/data/icons/miniglyphs/500/019-512.png');
+    background-repeat: no-repeat;
+    background-size: 20px;
+    background-position: center;
+    color: transparent;
+
+
 }
 .block-formregister{
     /*top: -120px;*/
