--- a/skyfolk/templates/account/base_login-signup.html
+++ b/skyfolk/templates/account/base_login-signup.html
@@ -81,7 +81,7 @@
 </div>
 <div class="Register">
 	<p class="Register">¿Empresa, grupo o evento? ¡Regístrate!</p>
-    <button class="register" href="#">Registrar</button>
+    <button class="register" href="{{ signup_url }}">Registrar</button>
 </div>
        </div>
        	
