--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -364,6 +364,11 @@
       <a href="file:///C:/Users/Adrian/Desktop/skyfolk/perfil.html" target="_blank">_adriancarayol</a> How would you like to intern with us this summer?
     </p>
   </article>
+  <!-- OPTIONES FIJAS -->
+  <ul class="optionsfixed">
+  <li class="fontawesome-eye-open"></li>
+  <li class="fontawesome-star"></li>
+  </ul>
   </div>
   <div class="wrapper">
   <div id="box">
