--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -343,101 +343,111 @@
       <div class="col-lg-12">
         <div class="sidebar card">
           <ul class="unstyled table fullwidth links">
-            <li class="active"><a>Popular</a></li>
-            <li class="comentarios"><a>Comentarios</a></li>
-            <li class="active"><a>Amigos</a></li>
+            <li class="active"><a href="#tab-popular">Popular</a></li>
+            <li class="comentarios"><a href="#tab-comentarios">Comentarios</a></li>
+            <li class="active"><a href="#tab-amigos">Amigos</a></li>
           </ul>
-          <ul class="unstyled content">
-            <div class="wrapper">
-  <div id="box">
-        <input id="profile" type="checkbox" checked> 
-        <label class="popo" for="profile">
-        <img src="http://www.1053kissfm.com/files/kp.jpg"alt="img">
-        </label>
-        <span class="entypo-thumbs-up" title="¡Me gusta!"></span> 
-        <span class="entypo-forward" title="Responder"></span>
-    <span class="entypo-plus" title="Añadir a..."></span>
-  </div>
-  <article class="articulo">
-    <h2 class="h22"><a href="http://www.twitter.com/random_studio" target="_blank" >_random_studio</a> mentioned you</h2>
-    <p class="parrafo">
-      <a href="file:///C:/Users/Adrian/Desktop/skyfolk/perfil.html" target="_blank">_adriancarayol</a> How would you like to intern with us this summer?
-    </p>
-  </article>
-  <!-- OPTIONES FIJAS -->
-  <ul class="optionsfixed">
-  <li class="fontawesome-eye-open"></li>
-  <li class="fontawesome-star"></li>
-  </ul>
-  </div>
-  <div class="wrapper">
-  <div id="box">
-        <input id="profile" type="checkbox" checked> 
-        <label class="popo" for="profile">
-        <img src="http://www.1053kissfm.com/files/kp.jpg"alt="img">
-        </label>
-        <span class="entypo-thumbs-up" title="¡Me gusta!"></span> 
-        <span class="entypo-forward" title="Responder"></span>
-    <span class="entypo-plus" title="Añadir a..."></span>
-  </div>
-  <article class="articulo">
-    <h2 class="h22"><a href="http://www.twitter.com/random_studio" target="_blank" >_random_studio</a> mentioned you</h2>
-    <p class="parrafo">
-      <a href="file:///C:/Users/Adrian/Desktop/skyfolk/perfil.html" target="_blank">_adriancarayol</a> How would you like to intern with us this summer?
-    </p>
-  </article>
-  </div>
-                           <div class="wrapper">
+          <div class="unstyled content" id="#tab-container">
+				<div id="tab-popular">
+	
+	
+	         	</div>
+				<div id="tab-comentarios">
+					<div class="wrapper">
+						  <div id="box">
+						        <input id="profile" type="checkbox" checked> 
+						        <label class="popo" for="profile">
+						        <img src="http://www.1053kissfm.com/files/kp.jpg"alt="img">
+						        </label>
+						        <span class="entypo-thumbs-up" title="¡Me gusta!"></span> 
+						        <span class="entypo-forward" title="Responder"></span>
+						    <span class="entypo-plus" title="Añadir a..."></span>
+						  </div>
+						  <article class="articulo">
+						    <h2 class="h22"><a href="http://www.twitter.com/random_studio" target="_blank" >_random_studio</a> mentioned you</h2>
+						    <p class="parrafo">
+						      <a href="file:///C:/Users/Adrian/Desktop/skyfolk/perfil.html" target="_blank">_adriancarayol</a> How would you like to intern with us this summer?
+						    </p>
+						  </article>
+						  <!-- OPTIONES FIJAS -->
+						  <ul class="optionsfixed">
+						  <li class="fontawesome-eye-open"></li>
+						  <li class="fontawesome-star"></li>
+						  </ul>
+		  			</div>
+					<div class="wrapper">
+						  <div id="box">
+						        <input id="profile" type="checkbox" checked> 
+						        <label class="popo" for="profile">
+						        <img src="http://www.1053kissfm.com/files/kp.jpg"alt="img">
+						        </label>
+						        <span class="entypo-thumbs-up" title="¡Me gusta!"></span> 
+						        <span class="entypo-forward" title="Responder"></span>
+						    <span class="entypo-plus" title="Añadir a..."></span>
+						  </div>
+						  <article class="articulo">
+						    <h2 class="h22"><a href="http://www.twitter.com/random_studio" target="_blank" >_random_studio</a> mentioned you</h2>
+						    <p class="parrafo">
+						      <a href="file:///C:/Users/Adrian/Desktop/skyfolk/perfil.html" target="_blank">_adriancarayol</a> How would you like to intern with us this summer?
+						    </p>
+						  </article>
+				  	</div>
+		            <div class="wrapper">
+		
+						  <div id="box">
+						        <input id="profile" type="checkbox" checked> 
+						        <label class="popo1" for="profile">
+						        <img src="http://www.1053kissfm.com/files/kp.jpg"alt="img">
+						        </label>
+						        <span class="entypo-thumbs-up"></span> 
+						        <span class="entypo-forward"></span>
+						    
+						  </div>
+						  <article class="articulo">
+						    <h2 class="h22"><a href="http://www.twitter.com/random_studio" target="_blank" >_diodio</a> mentioned you</h2>
+						    <p class="parrafo">
+						      <a href="file:///C:/Users/Adrian/Desktop/skyfolk/perfil.html" target="_blank">_adriancarayol</a> Este mensaje es privado.
+						    </p>
+						  </article>
+		  			</div>
+					 <div class="wrapper2">                  
+							  <div id="box2">
+							        <input id="profile" type="checkbox" checked> 
+							        <label class="popo" for="profile">
+							        <img src="http://www.1053kissfm.com/files/kp.jpg"alt="img">
+							        </label>
+							        <span class="entypo-thumbs-up"></span> 
+							        <span class="entypo-forward"></span>
+							  </div>
+							  <article class="articulo">
+							    <h2 class="h22"><a href="http://www.twitter.com/random_studio" target="_blank" >_random_studio</a> mentioned you</h2>
+							    <p class="parrafo">
+							      <a href="file:///C:/Users/Adrian/Desktop/skyfolk/perfil.html" target="_blank">_adriancarayol</a> How would you like to intern with us this summer?
+							    </p>
+							  </article>
+					  </div>
+		              <div class="wrapper">
+							  <div id="box">
+							        <input id="profile" type="checkbox" checked> 
+							        <label class="popo" for="profile">
+							        <img src="http://www.1053kissfm.com/files/kp.jpg"alt="img">
+							        </label>
+							        <span class="entypo-thumbs-up"></span> 
+							        <span class="entypo-forward"></span>
+							  </div>
+							  <article class="articulo">
+							    <h2 class="h22"><a href="http://www.twitter.com/random_studio" target="_blank" >_random_studio</a> mentioned you</h2>
+							    <p class="parrafo">
+							      <a href="file:///C:/Users/Adrian/Desktop/skyfolk/perfil.html" target="_blank">_adriancarayol</a> How would you like to intern with us this summer?
+							    </p>
+							  </article>
+						</div>
+				</div>
+				<div id="tab-popular">
 
-  <div id="box">
-        <input id="profile" type="checkbox" checked> 
-        <label class="popo1" for="profile">
-        <img src="http://www.1053kissfm.com/files/kp.jpg"alt="img">
-        </label>
-        <span class="entypo-thumbs-up"></span> 
-        <span class="entypo-forward"></span>
-    
-  </div>
-  <article class="articulo">
-    <h2 class="h22"><a href="http://www.twitter.com/random_studio" target="_blank" >_diodio</a> mentioned you</h2>
-    <p class="parrafo">
-      <a href="file:///C:/Users/Adrian/Desktop/skyfolk/perfil.html" target="_blank">_adriancarayol</a> Este mensaje es privado.
-    </p>
-  </article>
-  </div>
-   <div class="wrapper2">                  
-  <div id="box2">
-        <input id="profile" type="checkbox" checked> 
-        <label class="popo" for="profile">
-        <img src="http://www.1053kissfm.com/files/kp.jpg"alt="img">
-        </label>
-        <span class="entypo-thumbs-up"></span> 
-        <span class="entypo-forward"></span>
-  </div>
-  <article class="articulo">
-    <h2 class="h22"><a href="http://www.twitter.com/random_studio" target="_blank" >_random_studio</a> mentioned you</h2>
-    <p class="parrafo">
-      <a href="file:///C:/Users/Adrian/Desktop/skyfolk/perfil.html" target="_blank">_adriancarayol</a> How would you like to intern with us this summer?
-    </p>
-  </article>
-  </div>
-                   <div class="wrapper">
-  <div id="box">
-        <input id="profile" type="checkbox" checked> 
-        <label class="popo" for="profile">
-        <img src="http://www.1053kissfm.com/files/kp.jpg"alt="img">
-        </label>
-        <span class="entypo-thumbs-up"></span> 
-        <span class="entypo-forward"></span>
-  </div>
-  <article class="articulo">
-    <h2 class="h22"><a href="http://www.twitter.com/random_studio" target="_blank" >_random_studio</a> mentioned you</h2>
-    <p class="parrafo">
-      <a href="file:///C:/Users/Adrian/Desktop/skyfolk/perfil.html" target="_blank">_adriancarayol</a> How would you like to intern with us this summer?
-    </p>
-  </article>
-  </div>
-          </ul>
+
+				</div>
+          </div>
       </div>
       </div>
       </div>
