--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -547,9 +547,9 @@
     <textarea id="message2" placeholder="Escribe tu mensaje aquí..." required></textarea>
     <button type="submit">Enviar</button>
     <button type="close" id="close">Cerrar</button>
-    <button class="fontawesome-bullhorn"</button>
-    <button class="fontawesome-camera"</button>
-    <button class="fontawesome-map-marker"</button>
+    <button class="fontawesome-bullhorn"></button>
+    <button class="fontawesome-camera"></button>
+    <button class="fontawesome-map-marker"></button>
    
     
   </form>
