--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="uft-8">
+<meta charset="UTF-8">
 <meta name="description" content="Mi perfil">
 <meta name="keywords" content="Mi perfil, Mensajes, Amigos, Seguidores, Comentarios">
 <link rel="stylesheet" href="{{STATIC_URL}}css/miperfil.css"/>
@@ -14,6 +14,7 @@
 <meta http-equiv="content-type" content="text/html; charset=UTF-8" /> 
 <!--<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>-->
 <script src="{{STATIC_URL}}js/jquery.min.js"></script>
+<script src="{{STATIC_URL}}js/jquery.easytabs.js"></script>
 <script src="{{STATIC_URL}}js/jquery.gritter.js"></script>
 <script src="{{STATIC_URL}}js/profile.js"></script>
 <script src="{{STATIC_URL}}js/jquery.colorbox.js"></script>
@@ -142,7 +143,7 @@ top.window.outerWidth = screen.availWidth;
   		<div id ="box-tool">
 	  		<span class="fontawesome-th"></span>
 	  		<span class="fontawesome-comment-alt"></span>
-	  		<a class="fontawesome-link" href="#mislazos"</a>
+	  		<a class="fontawesome-link" href="#mislazos"></a>
 	  		<a class="fontawesome-cog" href="/config/changepass"></a>
 
 	  		<div class="notifications">
