--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -341,13 +341,14 @@
   <div class="col-lg-4 col-md-6 col-sm-12">
     <div class="container">
       <div class="col-lg-12">
-        <div class="sidebar card">
+      <div id="div-separator">
+        <div class="sidebar card" id="tab-container">
           <ul class="unstyled table fullwidth links">
-            <li class="active"><a href="#tab-popular">Popular</a></li>
-            <li class="comentarios"><a href="#tab-comentarios">Comentarios</a></li>
-            <li class="active"><a href="#tab-amigos">Amigos</a></li>
+            <li class="tab"><a href="#tab-popular">Popular</a></li>
+            <li class="tab"><a href="#tab-comentarios">Comentarios</a></li>
+            <li class="tab"><a href="#tab-amigos">Amigos</a></li>
           </ul>
-          <div class="unstyled content" id="#tab-container">
+          <div class="unstyled content">
 				<div id="tab-popular">
 	
 	
@@ -443,11 +444,12 @@
 							  </article>
 						</div>
 				</div>
-				<div id="tab-popular">
+				<div id="tab-amigos">
 
 
 				</div>
           </div>
+      </div>
       </div>
       </div>
       </div>
