--- a/skyfolk/static/css/amigos.css
+++ b/skyfolk/static/css/amigos.css
@@ -34,7 +34,7 @@ html, body {
 
 body {
   
-  background: #333333 url(https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcQ9N2Nws6EKk-ow6IQAiXf4ycMXtpej9rL2HPqEu0LssFGge0Rt) no-repeat center center;
+  background: #256E6E;
   
   background-size: cover;
 
