--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1685,20 +1685,15 @@ margin-top:25px;
 /* INFORMACIÓN SOBRE IMÁGEN */
 ul.informac {
     list-style-type: none;
-    display: block;
-    position: relative;
     font-size: 20px;
-    left: 0%;
-    text-align: center;
-    color: #fff;
-    margin: auto;
-}
+     color: #fff;
+    }
 ul.informac:hover {
   color: #fff;
 }
 div.infx {
   opacity: 0;
-  position: absolute;
+  position: relative;
   left: 15%;
   min-width: 15%;
   max-width: 15%;
@@ -1837,13 +1832,13 @@ overflow: hidden;
 display: block;
 margin: auto;
 text-align: center;
-z-index: 9999;
 letter-spacing: -1px;
 color: #FAFAFA;
 background-color: #246B61;
 opacity: 0.7;
 border-top-left-radius: 7px;
 border-top-right-radius: 7px;
+cursor: pointer;
 }
 
 
