--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1693,7 +1693,7 @@ ul.informac:hover {
 }
 div.infx {
   opacity: 0;
-  position: relative;
+  position: absolute;
   left: 15%;
   min-width: 15%;
   max-width: 15%;
